# toolchain-exec-example

./: .bazelrc  MODULE.bazel  README.md
rule/: BUILD.bazel  defs.bzl
tool/: BUILD.bazel
toolchain/: BUILD.bazel
