load("@bazel_skylib//rules:write_file.bzl", "write_file")

write_file(
    name = "tool",
    out = "tool.sh",
    content = [
        "#!/usr/bin/env bash",
    ] + select({
        "@platforms//os:linux": ["os=linux"],
        "@platforms//os:macos": ["os=macos"],
        "@platforms//os:windows": ["os=windows"],
    }) + select({
        "@platforms//cpu:x86_64": ["cpu=x86_64"],
        "@platforms//cpu:arm64": ["cpu=arm64"],
    }) + [
        "echo \"os=$os, cpu=$cpu\"",
    ],
    is_executable = True,
    visibility = ["//visibility:public"],
)
